syntax = "proto3";

package ecommerce.catalog.v1;

import "google/protobuf/wrappers.proto";
// import "validate/validate.proto";
import "message.proto";

option go_package = "github.com/DENFNC/Zappy/user_service/proto/gen/v1;v1";

message GetProductRequest {
   string product_id = 1;
}
message GetProductResponse {
   Product product = 1;
}

message ListProductsRequest {
  uint32 page_size = 1;
  string page_token = 2;
  string query = 3;
  repeated string category_ids = 4;
}
message ListProductsResponse {
  repeated Product products = 1;
  string next_page_token = 2;
}

message CreateProductRequest {
  string name = 1;
  google.protobuf.StringValue description = 2;
  uint32 price_cents = 3;
  string currency = 4;
  repeated string category_ids = 5;
}
message CreateProductResponse { Product product = 1; }

message UpdateProductRequest {
  string product_id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue description = 3;
  google.protobuf.Int64Value price_cents = 4;
  google.protobuf.StringValue currency = 5;
  repeated string category_ids = 6;
  google.protobuf.BoolValue is_active = 7;
}
message UpdateProductResponse { Product product = 1; }

message ListCategoriesRequest {}
message ListCategoriesResponse {
  repeated Category categories = 1;
}

message CreateCategoryRequest {
  string name = 1;
  google.protobuf.StringValue parent_id = 2;
}
message CreateCategoryResponse {
  Category category = 1;
}


service CatalogService {
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
  rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductResponse);

  rpc ListCategories (ListCategoriesRequest) returns (ListCategoriesResponse);
  rpc CreateCategory (CreateCategoryRequest) returns (CreateCategoryResponse);
}
